--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "extend": "^3.0.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pathfinding": "^0.4.18"
+    "pathfinding": "^0.4.18",
+    "xss": "^1.0.15"
   }
 }
